chore: Refactor setUp